# RogueLens

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
docs/: cv_description.md  how_to_present.md  methodology.md  physics_background.md  project_brief.md  project_log.md  reproducibility_check.md  single_image_mode.md  study_notes.md  technical_review.md
examples/: 01_basic_event.py  02_compare_planet_masses.py  03_noisy_observation.py  04_compare_impact_parameters.py  05_export_event_report.py
experiments/: injection_recovery.py
outputs/: cli_event.csv  cli_event_report.md  earth_event_light_curve.csv  earth_event_report.md
paper/: rogue_planets_paper_draft.md  rogue_planets_paper_outline.md
src/roguelens/: __init__.py  cli.py  demo_data.py  detect.py  fitting.py  io.py  lightcurve_io.py  model.py  photometry.py  physical.py  plotting.py  presets.py  probability.py  scoring.py
tests/: test_fitting.py  test_model.py  test_probability.py  test_scoring.py
