[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roguelens"
version = "0.2.0"
description = "Educational Python simulator for rogue-planet gravitational microlensing light curves."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Giannis Fryganiotis"}
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
app = ["streamlit>=1.30", "scipy>=1.10", "pandas>=2.0", "Pillow>=10.0"]

[project.scripts]
roguelens = "roguelens.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
